--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           <h2 class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </h2>
+          <img src="" alt="" class="lead__image_graphic" />
+          <img src="" alt="" class="lead__image_kalegin-michail" />
+          <p class="lead__caption">ваша полка — верхняя</p>
         </section>
       </main>
       <footer></footer>
