--- a/index.html
+++ b/index.html
@@ -159,8 +159,25 @@
             </p>
           </div>
         </section>
+        <section class="cover">
+          <h4 class="cover__title">До Байкала «на собаках»</h4>
+          <h5 class="cover__subtitle">
+            По мотивам учебной темы о Транссибе — путешествие от столицы до
+            Байкала на электричках.
+          </h5>
+          <div class="cover__overlay">
+            <img src="" alt="" class="cover__bachground" />
+          </div>
+        </section>
       </main>
-      <footer></footer>
+      <footer class="footer">
+        <a href="" class="footer__link">Карты</a>
+        <a href="" class="footer__link">Погода</a>
+        <a href="" class="footer__link">Расписание</a>
+        <a href="" class="footer__link">Календарь</a>
+        <a href="" class="footer__link">Путешествия</a>
+        <p class="footer__copyright">© 2020. Впишите своё имя</p>
+      </footer>
     </div>
   </body>
 </html>
