--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <img src="" alt="" class="header__logo" />
+        <a href="" class="header__lang-link">Ru</a>
+        <a href="" class="header__lang-link">En</a>
+      </header>
       <main>
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
