--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="" alt="" class="header__logo" />
+        <img
+          src="./images/header-logo.svg"
+          alt="карта_Россия"
+          class="header__logo"
+        />
         <a href="" class="header__lang-link">Ru</a>
         <a href="" class="header__lang-link">En</a>
       </header>
@@ -21,7 +25,11 @@
             Настоящая страна не в выпусках новостей, а здесь.
           </h2>
           <img src="" alt="" class="lead__image_graphic" />
-          <img src="" alt="" class="lead__image_kalegin-michail" />
+          <img
+            src="./images/lead-polka.jpg"
+            alt="кровать_и_график"
+            class="lead__image_kalegin-michail"
+          />
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
@@ -47,18 +55,66 @@
           </ul>
         </section>
         <section class="photo-grid">
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
-          <img src="" alt="" class="photo__item" />
+          <img
+            src="./images/photo-grid-train.jpg"
+            alt="окно"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-atharva-tulsi.jpg"
+            alt="облака"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-tuman.jpg"
+            alt="волк"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-sochi.jpg"
+            alt="лес"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-arisa.jpg"
+            alt="колесо"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-baikal.jpg"
+            alt="Байкал"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-elbrus.jpg"
+            alt="Эльбрус"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-kondratiev.jpg"
+            alt="знак_Пешехода"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-kamchatka-1.jpg"
+            alt="Камчатка"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-kamchatka-2.jpg"
+            alt="Камчатка2"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-baikal-2.jpg"
+            alt="Байкал2"
+            class="photo__item"
+          />
+          <img
+            src="./images/photo-grid-ergaki.jpg"
+            alt="горы"
+            class="photo__item"
+          />
         </section>
         <section class="places">
           <div class="place">
@@ -67,7 +123,11 @@
             <a href="http://park-kosa.ru/" class="place__website-url"
               >park-kosa.ru</a
             >
-            <img src="" alt="" class="place__image" />
+            <img
+              src="./images/place-kosa.jpg"
+              alt="море"
+              class="place__image"
+            />
             <p class="place__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
@@ -87,7 +147,11 @@
             <h4 class="place__title">Кольский</h4>
             <h5 class="place__website-url">URL</h5>
             <a href="" class="place__website-url">National Geographic</a>
-            <img src="" alt="" class="place__image" />
+            <img
+              src="./images/place-kolsky.jpg"
+              alt="горы_в_снегу"
+              class="place__image"
+            />
             <p class="place__paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская
               тундра, от которой на юг — тайга,  а на север — Ледовитый океан,
@@ -107,7 +171,11 @@
             <h4 class="place__title">Алтай</h4>
             <h5 class="place__website-url">URL</h5>
             <a href="" class="place__website-url">YouTube </a>
-            <img src="" alt="" class="place__image" />
+            <img
+              src="./images/place-altai.jpg"
+              alt="деревья"
+              class="place__image"
+            />
             <p class="place__paragraph">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
               гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
@@ -129,7 +197,11 @@
             <a href="https://vk.com/baikalmile" class="place__website-url"
               >https://vk.com/baikalmile</a
             >
-            <img src="" alt="" class="place__image" />
+            <img
+              src="./images/place-winter-baikal.jpg"
+              alt="лед"
+              class="place__image"
+            />
             <p class="place__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
               знают, что это самый большой источник пресной воды  и одно из
@@ -149,7 +221,11 @@
             <a href="http://vodlozero.ru/" class="place__website-url"
               >http://vodlozero.ru/</a
             >
-            <img src="" alt="" class="place__image" />
+            <img
+              src="./images/place-karelia.jpg"
+              alt="лес"
+              class="place__image"
+            />
             <p class="place__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
@@ -170,7 +246,11 @@
             Байкала на электричках.
           </h5>
           <div class="cover__overlay">
-            <img src="" alt="" class="cover__bachground" />
+            <img
+              src="./images/cover-trains.jpg"
+              alt="рельсы"
+              class="cover__bachground"
+            />
           </div>
         </section>
       </main>
