--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
           <h2 class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </h2>
-          <img src="" alt="" class="lead__image_graphic" />
           <img
             src="./images/lead-polka.jpg"
             alt="кровать_и_график"
-            class="lead__image_kalegin-michail"
+            class="lead__image"
           />
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
