--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Russian-travel</title>
     <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body>
@@ -15,8 +15,10 @@
           alt="карта_Россия"
           class="header__logo"
         />
-        <a href="" class="header__lang-link">Ru</a>
-        <a href="" class="header__lang-link">En</a>
+        <div>
+          <a href="" class="header__lang-link">Ru</a>
+          <a href="" class="header__lang-link">En</a>
+        </div>
       </header>
       <main>
         <section class="lead">
