--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <ul class="intro-list">
+          <ul class="intro__list">
             <li>Часовых поясов 11</li>
             <li>Объектов природного наследия ЮНЕСКО 12</li>
             <li>Объектов культурного наследия ЮНЕСКО 16</li>
