--- a/index.html
+++ b/index.html
@@ -59,62 +59,62 @@
           <img
             src="./images/photo-grid-train.jpg"
             alt="окно"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-atharva-tulsi.jpg"
             alt="облака"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-tuman.jpg"
             alt="волк"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-sochi.jpg"
             alt="лес"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-arisa.jpg"
             alt="колесо"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-baikal.jpg"
             alt="Байкал"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-elbrus.jpg"
             alt="Эльбрус"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-kondratiev.jpg"
             alt="знак_Пешехода"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-kamchatka-1.jpg"
             alt="Камчатка"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-kamchatka-2.jpg"
             alt="Камчатка2"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-baikal-2.jpg"
             alt="Байкал2"
-            class="photo__item"
+            class="photo-grid__item"
           />
           <img
             src="./images/photo-grid-ergaki.jpg"
             alt="горы"
-            class="photo__item"
+            class="photo-grid__item"
           />
         </section>
         <section class="places">
