--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="place">
             <h4 class="place__title">Куршская коса</h4>
             <h5 class="place__website-url">URL</h5>
-            <a href="http://park-kosa.ru/" class="place__website-url"
+            <a href="http://park-kosa.ru/" class="place__website-link"
               >park-kosa.ru</a
             >
             <img
@@ -147,7 +147,7 @@
           <div class="place">
             <h4 class="place__title">Кольский</h4>
             <h5 class="place__website-url">URL</h5>
-            <a href="" class="place__website-url">National Geographic</a>
+            <a href="" class="place__website-link">National Geographic</a>
             <img
               src="./images/place-kolsky.jpg"
               alt="горы_в_снегу"
@@ -171,7 +171,7 @@
           <div class="place">
             <h4 class="place__title">Алтай</h4>
             <h5 class="place__website-url">URL</h5>
-            <a href="" class="place__website-url">YouTube </a>
+            <a href="" class="place__website-link">YouTube </a>
             <img
               src="./images/place-altai.jpg"
               alt="деревья"
@@ -195,7 +195,7 @@
           <div class="place">
             <h4 class="place__title">Зимний Байкал</h4>
             <h5 class="place__website-url">URL</h5>
-            <a href="https://vk.com/baikalmile" class="place__website-url"
+            <a href="https://vk.com/baikalmile" class="place__website-link"
               >https://vk.com/baikalmile</a
             >
             <img
@@ -219,7 +219,7 @@
           <div class="place">
             <h4 class="place__title">Карелия</h4>
             <h5 class="place__website-url">URL</h5>
-            <a href="http://vodlozero.ru/" class="place__website-url"
+            <a href="http://vodlozero.ru/" class="place__website-link"
               >http://vodlozero.ru/</a
             >
             <img
