--- a/index.html
+++ b/index.html
@@ -120,10 +120,12 @@
         <section class="places">
           <div class="place">
             <h4 class="place__title">Куршская коса</h4>
-            <h5 class="place__website-url">URL</h5>
-            <a href="http://park-kosa.ru/" class="place__website-link"
-              >park-kosa.ru</a
-            >
+            <div>
+              <h5 class="place__website-url">URL</h5>
+              <a href="http://park-kosa.ru/" class="place__website-link"
+                >park-kosa.ru</a
+              >
+            </div>
             <img
               src="./images/place-kosa.jpg"
               alt="море"
@@ -148,8 +150,10 @@
           </div>
           <div class="place">
             <h4 class="place__title">Кольский</h4>
-            <h5 class="place__website-url">URL</h5>
-            <a href="" class="place__website-link">National Geographic</a>
+            <div>
+              <h5 class="place__website-url">URL</h5>
+              <a href="" class="place__website-link">National Geographic</a>
+            </div>
             <img
               src="./images/place-kolsky.jpg"
               alt="горы_в_снегу"
@@ -174,8 +178,10 @@
           </div>
           <div class="place">
             <h4 class="place__title">Алтай</h4>
-            <h5 class="place__website-url">URL</h5>
-            <a href="" class="place__website-link">YouTube </a>
+            <div>
+              <h5 class="place__website-url">URL</h5>
+              <a href="" class="place__website-link">YouTube </a>
+            </div>
             <img
               src="./images/place-altai.jpg"
               alt="деревья"
@@ -200,10 +206,12 @@
           </div>
           <div class="place">
             <h4 class="place__title">Зимний Байкал</h4>
-            <h5 class="place__website-url">URL</h5>
-            <a href="https://vk.com/baikalmile" class="place__website-link"
-              >https://vk.com/baikalmile</a
-            >
+            <div>
+              <h5 class="place__website-url">URL</h5>
+              <a href="https://vk.com/baikalmile" class="place__website-link"
+                >https://vk.com/baikalmile</a
+              >
+            </div>
             <img
               src="./images/place-winter-baikal.jpg"
               alt="лед"
@@ -226,15 +234,18 @@
           </div>
           <div class="place">
             <h4 class="place__title">Карелия</h4>
-            <h5 class="place__website-url">URL</h5>
-            <a href="http://vodlozero.ru/" class="place__website-link"
-              >http://vodlozero.ru/</a
-            >
+            <div>
+              <h5 class="place__website-url">URL</h5>
+              <a href="http://vodlozero.ru/" class="place__website-link"
+                >http://vodlozero.ru/</a
+              >
+            </div>
             <img
               src="./images/place-karelia.jpg"
               alt="лес"
               class="place__image"
             />
+
             <div class="place__paragraph">
               <p>
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
