--- a/index.html
+++ b/index.html
@@ -267,13 +267,12 @@
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
           </h5>
-          <div class="cover__overlay">
-            <img
-              src="./images/cover-trains.jpg"
-              alt="рельсы"
-              class="cover__bachground"
-            />
-          </div>
+          <div class="cover__overlay"></div>
+          <img
+            src="./images/cover-trains.jpg"
+            alt="рельсы"
+            class="cover__background"
+          />
         </section>
       </main>
       <footer class="footer">
