--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="" class="header__lang-link">En</a>
         </div>
       </header>
-      <main>
+      <main class="main">
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <h2 class="lead__subtitle">
