--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <a href="" class="footer__link">Расписание</a>
         <a href="" class="footer__link">Календарь</a>
         <a href="" class="footer__link">Путешествия</a>
-        <p class="footer__copyright">© 2020. Впишите своё имя</p>
+        <p class="footer__copyright">© 2022. Карасева Татьяна</p>
       </footer>
     </div>
   </body>
