--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         </section>
         <section class="places">
           <div class="place">
-            <h4 class="place__title">Куршская коса</h4>
-            <div>
+            <h4 class="place__title">Куршская &nbsp коса</h4>
+            <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
               <a href="http://park-kosa.ru/" class="place__website-link"
                 >park-kosa.ru</a
@@ -150,7 +150,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Кольский</h4>
-            <div>
+            <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
               <a href="" class="place__website-link">National Geographic</a>
             </div>
@@ -178,7 +178,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Алтай</h4>
-            <div>
+            <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
               <a href="" class="place__website-link">YouTube </a>
             </div>
@@ -206,7 +206,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Зимний Байкал</h4>
-            <div>
+            <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
               <a href="https://vk.com/baikalmile" class="place__website-link"
                 >https://vk.com/baikalmile</a
@@ -234,7 +234,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Карелия</h4>
-            <div>
+            <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
               <a href="http://vodlozero.ru/" class="place__website-link"
                 >http://vodlozero.ru/</a
@@ -262,7 +262,7 @@
           </div>
         </section>
         <section class="cover">
-          <h4 class="cover__title">До Байкала «на собаках»</h4>
+          <h4 class="cover__title">До Байкала &nbsp «на собаках»</h4>
           <h5 class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
