--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           </div>
         </section>
         <section class="cover">
-          <h4 class="cover__title">До Байкала &nbsp «на собаках»</h4>
+          <h4 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h4>
           <h5 class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
