--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           class="header__logo"
         />
         <div>
-          <a href="" class="header__lang-link">Ru</a>
+          <a href="" class="header__lang-link header__lang-link_active">Ru</a>
           <a href="" class="header__lang-link">En</a>
         </div>
       </header>
@@ -152,7 +152,11 @@
             <h4 class="place__title">Кольский</h4>
             <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
-              <a href="" class="place__website-link">National Geographic</a>
+              <a
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="place__website-link"
+                >National Geographic</a
+              >
             </div>
             <img
               src="./images/place-kolsky.jpg"
@@ -180,7 +184,11 @@
             <h4 class="place__title">Алтай</h4>
             <div class="place__url_link">
               <h5 class="place__website-url">URL</h5>
-              <a href="" class="place__website-link">YouTube </a>
+              <a
+                href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
+                class="place__website-link"
+                >YouTube
+              </a>
             </div>
             <img
               src="./images/place-altai.jpg"
@@ -262,11 +270,15 @@
           </div>
         </section>
         <section class="cover">
-          <h4 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h4>
-          <h5 class="cover__subtitle">
+          <a
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            class="cover__title"
+            >До&nbsp;Байкала «на&nbsp;собаках»</a
+          >
+          <h4 class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
-          </h5>
+          </h4>
           <div class="cover__overlay"></div>
           <img
             src="./images/cover-trains.jpg"
@@ -276,11 +288,11 @@
         </section>
       </main>
       <footer class="footer">
-        <a href="" class="footer__link">Карты</a>
-        <a href="" class="footer__link">Погода</a>
-        <a href="" class="footer__link">Расписание</a>
-        <a href="" class="footer__link">Календарь</a>
-        <a href="" class="footer__link">Путешествия</a>
+        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
         <p class="footer__copyright">© 2022. Карасева Татьяна</p>
       </footer>
     </div>
