--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </header>
       <main class="main">
         <section class="lead">
-          <h1 class="lead__title">Путешествия по России</h1>
+          <h1 class="lead__title">Путешествия по&nbsp;России</h1>
           <h2 class="lead__subtitle">
-            Настоящая страна не в выпусках новостей, а здесь.
+            Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках
+            новостей,&nbsp;а&nbsp; здесь.
           </h2>
           <img
             src="./images/lead-polka.jpg"
