--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <section class="places">
           <div class="place">
             <h4 class="place__title">Куршская коса</h4>
-            <div class="place__url_link">
+            <div class="place__url-link">
               <h5 class="place__website-url">URL</h5>
               <a href="http://park-kosa.ru/" class="place__website-link"
                 >park-kosa.ru</a
