--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Кольский</h4>
-            <div class="place__url_link">
+            <div class="place__url-link">
               <h5 class="place__website-url">URL</h5>
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
@@ -185,7 +185,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Алтай</h4>
-            <div class="place__url_link">
+            <div class="place__url-link">
               <h5 class="place__website-url">URL</h5>
               <a
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
@@ -217,7 +217,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Зимний Байкал</h4>
-            <div class="place__url_link">
+            <div class="place__url-link">
               <h5 class="place__website-url">URL</h5>
               <a href="https://vk.com/baikalmile" class="place__website-link"
                 >https://vk.com/baikalmile</a
@@ -245,7 +245,7 @@
           </div>
           <div class="place">
             <h4 class="place__title">Карелия</h4>
-            <div class="place__url_link">
+            <div class="place__url-link">
               <h5 class="place__website-url">URL</h5>
               <a href="http://vodlozero.ru/" class="place__website-link"
                 >http://vodlozero.ru/</a
