--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </section>
         <section class="places">
           <div class="place">
-            <h4 class="place__title">Куршская коса</h4>
+            <h4 class="place__title">Куршская&nbsp;&nbsp; коса</h4>
             <div class="place__url-link">
               <h5 class="place__website-url">URL</h5>
               <a href="http://park-kosa.ru/" class="place__website-link"
