--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Russian-travel</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <title>Путешествия по России</title>
     <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body class="body">
@@ -16,9 +15,9 @@
           alt="карта_Россия"
           class="header__logo"
         />
-        <div>
-          <a href="" class="header__lang-link header__lang-link_active">Ru</a>
-          <a href="" class="header__lang-link">En</a>
+        <div class="lang-links">
+          <a href="#" class="lang-links__lang-link lang-links__lang-link_active">Ru</a>
+          <a href="#" class="lang-links__lang-link">En</a>
         </div>
       </header>
       <main class="main">
