--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
           class="header__logo"
         />
         <div class="lang-links">
-          <a href="#" class="lang-links__lang-link lang-links__lang-link_active">Ru</a>
+          <a href="#" class="lang-links__lang-link lang-links__lang-link_active"
+            >Ru</a
+          >
           <a href="#" class="lang-links__lang-link">En</a>
         </div>
       </header>
       <main class="main">
         <section class="lead">
           <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-          <h2 class="lead__subtitle">
+          <p class="lead__subtitle">
             Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках
             новостей,&nbsp;а&nbsp; здесь.
-          </h2>
+          </p>
           <img
             src="./images/lead-polka.jpg"
             alt="кровать_и_график"
@@ -35,7 +37,7 @@
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-          <h3 class="intro__title">Чего мы там не видели?</h3>
+          <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
             36% планируют провести отпуск в родной стране. Мол, чего мы тут,
@@ -49,11 +51,19 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li>Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li>Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
-            <li>Аэропортов 241</li>
+            <li>Часовых поясов <span class="intro__figure">11</span></li>
+            <li>
+              Объектов природного наследия ЮНЕСКО
+              <span class="intro__figure">12</span>
+            </li>
+            <li>
+              Объектов культурного наследия ЮНЕСКО
+              <span class="intro__figure">16</span>
+            </li>
+            <li>
+              Природных заповедников <span class="intro__figure">105</span>
+            </li>
+            <li>Аэропортов <span class="intro__figure">241</span></li>
           </ul>
         </section>
         <section class="photo-grid">
@@ -120,11 +130,11 @@
         </section>
         <section class="places">
           <div class="place">
-            <h4 class="place__title">Куршская&nbsp;&nbsp; коса</h4>
+            <h3 class="place__title">Куршская&nbsp;&nbsp; коса</h3>
             <div class="place__url-link">
-              <h5 class="place__website-url">URL</h5>
+              <h4 class="place__website-url">URL</h4>
               <a href="http://park-kosa.ru/" class="place__website-link"
-                >park-kosa.ru</a
+                >park-kosa.ru target="_blank"</a
               >
             </div>
             <img
@@ -150,13 +160,13 @@
             </div>
           </div>
           <div class="place">
-            <h4 class="place__title">Кольский</h4>
+            <h3 class="place__title">Кольский</h3>
             <div class="place__url-link">
-              <h5 class="place__website-url">URL</h5>
+              <h4 class="place__website-url">URL</h4>
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 class="place__website-link"
-                >National Geographic</a
+                >National Geographic target="_blank"</a
               >
             </div>
             <img
@@ -182,12 +192,13 @@
             </div>
           </div>
           <div class="place">
-            <h4 class="place__title">Алтай</h4>
+            <h3 class="place__title">Алтай</h3>
             <div class="place__url-link">
-              <h5 class="place__website-url">URL</h5>
+              <h4 class="place__website-url">URL</h4>
               <a
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
                 class="place__website-link"
+                target="_blank"
                 >YouTube
               </a>
             </div>
@@ -214,11 +225,11 @@
             </div>
           </div>
           <div class="place">
-            <h4 class="place__title">Зимний Байкал</h4>
+            <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__url-link">
-              <h5 class="place__website-url">URL</h5>
+              <h4 class="place__website-url">URL</h4>
               <a href="https://vk.com/baikalmile" class="place__website-link"
-                >https://vk.com/baikalmile</a
+                >https://vk.com/baikalmile target="_blank"</a
               >
             </div>
             <img
@@ -242,11 +253,11 @@
             </div>
           </div>
           <div class="place">
-            <h4 class="place__title">Карелия</h4>
+            <h3 class="place__title">Карелия</h3>
             <div class="place__url-link">
-              <h5 class="place__website-url">URL</h5>
+              <h4 class="place__website-url">URL</h4>
               <a href="http://vodlozero.ru/" class="place__website-link"
-                >http://vodlozero.ru/</a
+                >http://vodlozero.ru/ target="_blank"</a
               >
             </div>
             <img
@@ -274,6 +285,7 @@
           <a
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
             class="cover__title"
+            target="_blank"
             >До&nbsp;Байкала «на&nbsp;собаках»</a
           >
           <h4 class="cover__subtitle">
@@ -289,11 +301,24 @@
         </section>
       </main>
       <footer class="footer">
-        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+        <a href="https://yandex.ru/maps" class="footer__link" target="_blank"
+          >Карты</a
+        >
+        <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank"
+          >Погода</a
+        >
+        <a href="https://rasp.yandex.ru" class="footer__link" target="_blank"
+          >Расписание</a
+        >
+        <a
+          href="https://calendar.yandex.ru"
+          class="footer__link"
+          target="_blank"
+          >Календарь</a
+        >
+        <a href="https://travel.yandex.ru" class="footer__link" target="_blank"
+          >Путешествия</a
+        >
         <p class="footer__copyright">© 2022. Карасева Татьяна</p>
       </footer>
     </div>
