--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="place">
             <h3 class="place__title">Куршская&nbsp;&nbsp; коса</h3>
             <div class="place__url-link">
-              <h4 class="place__website-url">URL</h4>
+              <p class="place__website-url">URL</p>
               <a href="http://park-kosa.ru/" class="place__website-link"
                 >park-kosa.ru target="_blank"</a
               >
@@ -143,13 +143,13 @@
               class="place__image"
             />
             <div class="place__paragraph">
-              <p>
+              <p class="place__text">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                 водных горизонта — спокойного Куршского залива с одной стороны и
                 подёрнутого рябью волн Балтийского моря с другой. Уникальная
                 природная зона на краю российского анклава.
               </p>
-              <p>
+              <p class="place__text place__text_margin-bottom">
                 На этом Калининградская область не заканчивается. Для
                 путешественника и исследователя там же по соседству — самая
                 западная точка России, Балтийская коса, — и немецкое наследие
@@ -162,7 +162,7 @@
           <div class="place">
             <h3 class="place__title">Кольский</h3>
             <div class="place__url-link">
-              <h4 class="place__website-url">URL</h4>
+              <p class="place__website-url">URL</p>
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 class="place__website-link"
@@ -175,12 +175,12 @@
               class="place__image"
             />
             <div class="place__paragraph">
-              <p>
+              <p class="place__text">
                 Почти весь полуостров находится за Полярным кругом. Саамская
                 тундра, от которой на юг — тайга,  а на север — Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p>
+              <p class="place__text place__text_margin-bottom">
                 Возможно, вы смотрели Звягинцева и даже слышали историю
                 арктического фестиваля в Териберке. Возможно, слово «Хибины» не
                 осталось под снегом школьных воспоминаний об уроках географии.
@@ -194,7 +194,7 @@
           <div class="place">
             <h3 class="place__title">Алтай</h3>
             <div class="place__url-link">
-              <h4 class="place__website-url">URL</h4>
+              <p class="place__website-url">URL</p>
               <a
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
                 class="place__website-link"
@@ -208,14 +208,14 @@
               class="place__image"
             />
             <div class="place__paragraph">
-              <p>
+              <p class="place__text">
                 Алтай — одно из красивейших мест в России. В первую очередь
                 из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
                 соснами, горные реки и озёра.  А если вы откроете в автомобиле
                 окна, сможете познакомиться с невидимым чудом здешних мест —
                 горным воздухом.
               </p>
-              <p>
+              <p class="place__text place__text_margin-bottom">
                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
                 Так вы увидите всё разнообразие местной флоры и фауны. По лесам
                 Алтая бродят лоси, над хребтами летают орлы,  а на равнинах
@@ -227,7 +227,7 @@
           <div class="place">
             <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__url-link">
-              <h4 class="place__website-url">URL</h4>
+              <p class="place__website-url">URL</p>
               <a href="https://vk.com/baikalmile" class="place__website-link"
                 >https://vk.com/baikalmile target="_blank"</a
               >
@@ -238,12 +238,12 @@
               class="place__image"
             />
             <div class="place__paragraph">
-              <p>
+              <p class="place__text">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
                 знают, что это самый большой источник пресной воды  и одно из
                 красивейших мест  в России.
               </p>
-              <p>
+              <p class="place__text place__text_margin-bottom">
                 Конечно, это всё так. Но Байкал ещё идеальное место для 
                 соревнований по скийорингу. Это такой вид спорта, когда лыжник
                 привязывает себя к мотоциклу, и тандем старается развить как
@@ -255,7 +255,7 @@
           <div class="place">
             <h3 class="place__title">Карелия</h3>
             <div class="place__url-link">
-              <h4 class="place__website-url">URL</h4>
+              <p class="place__website-url">URL</p>
               <a href="http://vodlozero.ru/" class="place__website-link"
                 >http://vodlozero.ru/ target="_blank"</a
               >
@@ -267,7 +267,7 @@
             />
 
             <div class="place__paragraph">
-              <p>
+              <p class="place__text">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
                 она вымахивает на 30 метров — леса карельских национальных
