--- a/index.html
+++ b/index.html
@@ -283,42 +283,46 @@
         </section>
         <section class="cover">
           <a
+            class="cover__link"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__title"
             target="_blank"
-            >До&nbsp;Байкала «на&nbsp;собаках»</a
           >
-          <h4 class="cover__subtitle">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до
-            Байкала на электричках.
-          </h4>
+            <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </p>
+          </a>
           <div class="cover__overlay"></div>
-          <img
-            src="./images/cover-trains.jpg"
-            alt="рельсы"
-            class="cover__background"
-          />
         </section>
       </main>
       <footer class="footer">
-        <a href="https://yandex.ru/maps" class="footer__link" target="_blank"
-          >Карты</a
-        >
-        <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank"
-          >Погода</a
-        >
-        <a href="https://rasp.yandex.ru" class="footer__link" target="_blank"
-          >Расписание</a
-        >
-        <a
-          href="https://calendar.yandex.ru"
-          class="footer__link"
-          target="_blank"
-          >Календарь</a
-        >
-        <a href="https://travel.yandex.ru" class="footer__link" target="_blank"
-          >Путешествия</a
-        >
+        <nav>
+          <a href="https://yandex.ru/maps" class="footer__link" target="_blank"
+            >Карты</a
+          >
+          <a
+            href="https://yandex.ru/pogoda"
+            class="footer__link"
+            target="_blank"
+            >Погода</a
+          >
+          <a href="https://rasp.yandex.ru" class="footer__link" target="_blank"
+            >Расписание</a
+          >
+          <a
+            href="https://calendar.yandex.ru"
+            class="footer__link"
+            target="_blank"
+            >Календарь</a
+          >
+          <a
+            href="https://travel.yandex.ru"
+            class="footer__link"
+            target="_blank"
+            >Путешествия</a
+          >
+        </nav>
         <p class="footer__copyright">© 2022. Карасева Татьяна</p>
       </footer>
     </div>
