--- a/index.html
+++ b/index.html
@@ -133,8 +133,11 @@
             <h3 class="place__title">Куршская&nbsp;&nbsp; коса</h3>
             <div class="place__url-link">
               <p class="place__website-url">URL</p>
-              <a href="http://park-kosa.ru/" class="place__website-link"
-                >park-kosa.ru target="_blank"</a
+              <a
+                href="http://park-kosa.ru/"
+                class="place__website-link"
+                target="_blank"
+                >park-kosa.ru</a
               >
             </div>
             <img
@@ -166,7 +169,8 @@
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 class="place__website-link"
-                >National Geographic target="_blank"</a
+                target="_blank"
+                >National Geographic</a
               >
             </div>
             <img
@@ -228,8 +232,11 @@
             <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__url-link">
               <p class="place__website-url">URL</p>
-              <a href="https://vk.com/baikalmile" class="place__website-link"
-                >https://vk.com/baikalmile target="_blank"</a
+              <a
+                href="https://vk.com/baikalmile"
+                class="place__website-link"
+                target="_blank"
+                >https://vk.com/baikalmile</a
               >
             </div>
             <img
@@ -256,8 +263,11 @@
             <h3 class="place__title">Карелия</h3>
             <div class="place__url-link">
               <p class="place__website-url">URL</p>
-              <a href="http://vodlozero.ru/" class="place__website-link"
-                >http://vodlozero.ru/ target="_blank"</a
+              <a
+                href="http://vodlozero.ru/"
+                class="place__website-link"
+                target="_blank"
+                >http://vodlozero.ru/</a
               >
             </div>
             <img
@@ -267,7 +277,7 @@
             />
 
             <div class="place__paragraph">
-              <p class="place__text">
+              <p class="place__text place__text_margin-bottom">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
                 она вымахивает на 30 метров — леса карельских национальных
@@ -297,7 +307,7 @@
         </section>
       </main>
       <footer class="footer">
-        <nav>
+        <nav class="footer__nav">
           <a href="https://yandex.ru/maps" class="footer__link" target="_blank"
             >Карты</a
           >
