--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
           alt="карта_Россия"
           class="header__logo"
         />
-        <div class="lang-links">
-          <a href="#" class="lang-links__lang-link lang-links__lang-link_active"
-            >Ru</a
-          >
-          <a href="#" class="lang-links__lang-link">En</a>
+        <div class="header__lang-links">
+          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+          <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
       <main class="main">
