--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 окна, сможете познакомиться с невидимым чудом здешних мест —
                 горным воздухом.
               </p>
-              <p class="place__text place__text_margin-bottom">
+              <p class="place__text">
                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
                 Так вы увидите всё разнообразие местной флоры и фауны. По лесам
                 Алтая бродят лоси, над хребтами летают орлы, а на равнинах
@@ -301,7 +301,6 @@
               Байкала на электричках.
             </p>
           </a>
-          <div class="cover__overlay"></div>
         </section>
       </main>
       <footer class="footer">
