--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="body">
     <div class="page">
-      <header class="header">
+      <header class="header page-padding">
         <img
           src="./images/header-logo.svg"
           alt="карта_Россия"
@@ -22,8 +22,8 @@
       </header>
       <main class="main">
         <section class="lead">
-          <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-          <p class="lead__subtitle">
+          <h1 class="lead__title page-padding">Путешествия по&nbsp;России</h1>
+          <p class="lead__subtitle page-padding">
             Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках
             новостей,&nbsp;а&nbsp; здесь.
           </p>
@@ -32,9 +32,9 @@
             alt="кровать_и_график"
             class="lead__image"
           />
-          <p class="lead__caption">ваша полка — верхняя</p>
+          <p class="lead__caption page-padding">ваша полка — верхняя</p>
         </section>
-        <section class="intro">
+        <section class="intro page-padding">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
@@ -64,7 +64,7 @@
             <li>Аэропортов <span class="intro__figure">241</span></li>
           </ul>
         </section>
-        <section class="photo-grid">
+        <section class="photo-grid page-padding">
           <img
             src="./images/photo-grid-train.jpg"
             alt="окно"
@@ -303,7 +303,7 @@
           </a>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer page-padding">
         <nav class="footer__nav">
           <a href="https://yandex.ru/maps" class="footer__link" target="_blank"
             >Карты</a
