--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p class="lead__caption page-padding">ваша полка — верхняя</p>
         </section>
         <section class="intro page-padding">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <h2 class="intro__title">Чего&nbsp;мы&nbsp;там не&nbsp;видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
             36% планируют провести отпуск в родной стране. Мол, чего мы тут,
