--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 подёрнутого рябью волн Балтийского моря с другой. Уникальная
                 природная зона на краю российского анклава.
               </p>
-              <p class="place__text place__text_margin-bottom">
+              <p class="place__text">
                 На этом Калининградская область не заканчивается. Для
                 путешественника и исследователя там же по соседству — самая
                 западная точка России, Балтийская коса, — и немецкое наследие
@@ -182,7 +182,7 @@
                 тундра, от которой на юг — тайга, а на север — Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p class="place__text place__text_margin-bottom">
+              <p class="place__text">
                 Возможно, вы смотрели Звягинцева и даже слышали историю
                 арктического фестиваля в Териберке. Возможно, слово «Хибины» не
                 осталось под снегом школьных воспоминаний об уроках географии.
@@ -248,7 +248,7 @@
                 знают, что это самый большой источник пресной воды и одно из
                 красивейших мест в России.
               </p>
-              <p class="place__text place__text_margin-bottom">
+              <p class="place__text">
                 Конечно, это всё так. Но Байкал ещё идеальное место для 
                 соревнований по скийорингу. Это такой вид спорта, когда лыжник
                 привязывает себя к мотоциклу, и тандем старается развить как
@@ -275,7 +275,7 @@
             />
 
             <div class="place__paragraph">
-              <p class="place__text place__text_margin-bottom">
+              <p class="place__text">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
                 она вымахивает на 30 метров — леса карельских национальных
